<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="favourites_song">Favorite Songs</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_song">Total Songs</string>
    <string name="world_of_music">World of music</string>
    <string name="song_name">Song name</string>
    <string name="playlist_name">Playlist name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">04:12</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_nav">Welcome to \nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="artist">Artist</string>
    <string name="exit">Exit</string>
    <string name="songAlbum">Song Album</string>
    <string name="search_view">Search View</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="playlist_details">Playlist Details</string>
    <string name="your_name">Your Name</string>
    <string name="btn_add">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="create_on">Create On</string>
    <string name="create_by">Create By</string>
    <string name="search_song">Search Song</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; \n To Add It Into Favourites. </string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="btn_send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version">Version Name: </string>
</resources>