<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_player"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/img_btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:srcCompat="@drawable/back_ic"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights"/>

        <ImageButton
            android:id="@+id/img_btn_fav"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="17dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourites_btn"
            app:srcCompat="@drawable/favourite_empty_ic"
            app:tint="@android:color/holo_red_dark" />
    </LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_song"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:civ_border_width="1dp"
        android:src="@drawable/music_player_icon_splash"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>

    <TextView
        android:id="@+id/tv_songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_Artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/artist"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingTop="10dp">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPreviou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/skip_previous_ic"
            app:iconSize="40dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPausePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            app:icon="@drawable/pause_ic"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:tint="@color/white"
            app:iconSize="35dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/skip_next_ic"
            app:iconSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp"/>


        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_repeatPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            app:srcCompat="@drawable/repeat_ic"
            app:tint="@android:color/holo_red_dark"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_equalizerPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizer_btn"
            app:srcCompat="@drawable/equalizer_ic"
            app:tint="@android:color/holo_red_dark"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_timerPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            app:srcCompat="@drawable/timer_ic"
            app:tint="@android:color/holo_red_dark"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_sharePA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            app:srcCompat="@drawable/share_ic"
            app:tint="@android:color/holo_red_dark"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>