<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="2dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMusicView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/music_player_icon"
            app:shapeAppearanceOverlay="@style/curved"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toEndOf="@id/imgMusicView"
            android:layout_toStartOf="@id/songDuration"
            android:text="@string/song_name"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/songAlbumMV"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_toEndOf="@id/imgMusicView"
            android:layout_toStartOf="@id/songDuration"
            android:text="@string/songAlbum"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/start_tv"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp"/>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>