<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">


    <LinearLayout
        android:id="@+id/min15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/timer_ic"
            app:tint="@color/cool_pink"
            android:layout_margin="10dp"
            android:contentDescription="@string/min_15"/>

        <TextView
            android:id="@+id/tv_min15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_15"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/timer_ic"
            app:tint="@color/cool_pink"
            android:layout_margin="10dp"
            android:contentDescription="@string/min_30"/>

        <TextView
            android:id="@+id/tv_min30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_30"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView60"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/timer_ic"
            app:tint="@color/cool_pink"
            android:layout_margin="10dp"
            android:contentDescription="@string/min_60"/>

        <TextView
            android:id="@+id/tv_min60"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_60"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</LinearLayout>